<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#00738e" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_netease_top"
            android:text="@string/news_top_left_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/tb_select_witer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/base_action_bar_main_more_normal"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="用户名："
                android:textColor="#000000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="英文和数字组成"
                android:singleLine="true"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_password"
                android:textColor="#000000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/et_number_password_hint"
                android:singleLine="true"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_countersign_password"
                android:textColor="#000000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/et_countersign_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/et_countersign_password"
                android:singleLine="true"
                android:textSize="20dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/cb_agree"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:onClick="register"
            android:text="@string/btn_immediately_register"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

</LinearLayout>