<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#00738e" >
        

        <TextView android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_netease_top"
            android:text="@string/news_top_left_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
		<ToggleButton 
		    android:id="@+id/tb_select_witer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textOn=""
            android:textOff=""
		    android:background="@drawable/base_action_bar_main_more_normal"/>

		<TextView
		    android:id="@+id/tv_detail_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:layout_marginRight="40dp"
		    android:background="@drawable/night_biz_tie_comment_orig_normal" 
		    android:textColor="@android:color/white"
		    android:textSize="10dp"
		    android:gravity="center"/>
    </RelativeLayout>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
         <ViewSwitcher
	        android:id="@+id/viewSwitcher"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
    	</ViewSwitcher>
    	<LinearLayout 
    	    android:id="@+id/ll_witer_comments_menu"
    	    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/base_dropdown_panel_bg"
		    android:layout_gravity="right"
		    android:visibility="invisible"
		    android:orientation="vertical">
    	    <LinearLayout android:id="@+id/ll_writer_comment"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="10dp"
    	        android:layout_marginTop="10dp"
    	        android:orientation="horizontal"
    	        android:onClick="menuSelect">
    	    	<ImageView android:layout_width="20dp"
    	    	    android:layout_height="20dp"
    	    	    android:src="@drawable/biz_news_newspage_comment_icon"/>
    	    	<TextView android:layout_width="fill_parent"
    	    	    android:layout_height="wrap_content"
    	    	    android:textColor="@android:color/black"
    	    	    android:gravity="center_vertical"
    	    	    android:textSize="12dp"
    	    	    android:paddingLeft="10dp"
    	    	    android:layout_gravity="center"
    	    	    android:text="@string/tv_witer"/>
    	    </LinearLayout>
    	     
    	     <ImageView android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginTop="5dp"
    	        android:src="@drawable/base_action_bar_dropdown_list_divider"/>
    	     <LinearLayout android:id="@+id/ll_collect"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="10dp"
    	        android:layout_marginTop="5dp"
    	        android:orientation="horizontal"
    	        android:onClick="menuSelect">
    	    	<ImageView android:layout_width="20dp"
    	    	    android:layout_height="20dp"
    	    	    android:src="@drawable/biz_news_newspage_un_collect_icon"/>
    	    	<TextView android:layout_width="fill_parent"
    	    	    android:layout_height="wrap_content"
    	    	    android:textColor="@android:color/black"
    	    	    android:gravity="center_vertical"
    	    	    android:textSize="12dp"
    	    	    android:paddingLeft="10dp"
    	    	    android:layout_gravity="center"
    	    	    android:text="@string/tv_collect"/>
    	    </LinearLayout>
    	     <ImageView android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginTop="5dp"
    	        android:src="@drawable/base_action_bar_dropdown_list_divider"/>
    	     <LinearLayout android:id="@+id/ll_aa"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="10dp"
    	        android:layout_marginTop="5dp"
    	        android:orientation="horizontal"
    	        android:onClick="menuSelect">
    	    	<ImageView android:layout_width="20dp"
    	    	    android:layout_height="20dp"
    	    	    android:src="@drawable/biz_news_newspage_font_icon"/>
    	    	<TextView android:layout_width="fill_parent"
    	    	    android:layout_height="wrap_content"
    	    	    android:textColor="@android:color/black"
    	    	    android:gravity="center_vertical"
    	    	    android:textSize="12dp"
    	    	    android:paddingLeft="10dp"
    	    	    android:layout_gravity="center"
    	    	    android:text="@string/tv_Aa"/>
    	    </LinearLayout>
    	</LinearLayout>
    	<LinearLayout 
    	    android:id="@+id/ll_writer"
    	    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:layout_gravity="bottom"
		    android:background="@color/bg"
		    android:visibility="invisible">
    	    <EditText android:id="@+id/et_write_comments"
    	        android:layout_width="0dp"
    	        android:layout_weight="4"
    	        android:layout_marginLeft="10dp"
    	        android:layout_marginRight="10dp"
    	        android:layout_height="wrap_content"
    	        android:layout_gravity="center"
    	        android:background="@drawable/base_search_edittext_bg_focused"
    	        android:hint="@string/et_witer_comments_hint"/>
    	    <Button android:layout_width="0dp"
    	        android:layout_height="wrap_content"
    	        android:layout_gravity="center"
    	        android:layout_weight="1"
    	        android:background="@drawable/base_send_normal"
    	        android:onClick="send"/>
    	</LinearLayout>
    </FrameLayout>
    
   
    

</LinearLayout>