<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#00738e" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_netease_top"
            android:text="@string/news_top_left_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/total"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/mymohu" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/userInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        style="@style/small_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="用户：" />

                    <TextView
                        style="@style/small_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="123" />

                    <TextView
                        style="@style/small_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="已登录" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/logintotal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_number"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/base_search_edittext_bg"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="账号："
                        android:textColor="#000000"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/et_number_hint"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/base_search_edittext_bg"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="密码："
                        android:textColor="#000000"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/et_password_hint"
                        android:password="true"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/zhuce"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:onClick="myAction"
                        android:text="@string/btn_register"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/denglu"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="myAction"
                        android:text="@string/btn_login"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>